--- a/docs/integration/pig-lightweight-log-tracing.mdx
+++ b/docs/integration/pig-lightweight-log-tracing.mdx
@@ -5,17 +5,14 @@ title: "pig 整合轻量级日志链路追踪"
 [此处为语雀卡片，点击链接查看](https://www.yuque.com/docs/72887170#E1cM1)
 
 ## 背景
-<font style="color:rgb(64, 72, 91);">在微服务里，业务出现问题或者程序出的任何问题，都少不了查看日志，一般我们使用 </font><font style="color:rgba(0, 0, 0, 0.8);background-color:rgb(247, 247, 249);">ELK</font><font style="color:rgb(64, 72, 91);"> 相关的日志收集工具，服务多的情况下，业务问题也是有些难以排查，只能确定大致时间定位相关日志。</font><font style="color:rgba(0, 0, 0, 0.8);background-color:rgb(247, 247, 249);">log-trace-spring-boot-starter</font><font style="color:rgb(64, 72, 91);"> 解决多个服务调用日志的问题，它可以将一个完整的调用链给整合为一个完整有序的日志。</font>
 
-<font style="color:rgb(64, 72, 91);"></font>
+在微服务里，业务出现问题或者程序出的任何问题，都少不了查看日志。一般我们使用 ELK 相关的日志收集工具，服务多的情况下，业务问题也是有些难以排查，只能确定大致时间定位相关日志。log-trace-spring-boot-starter 解决多个服务调用日志的问题，它可以将一个完整的调用链给整合为一个完整有序的日志。
 
-## <font style="color:rgb(64, 72, 91);">①  微服务添加依赖</font>
+## 微服务添加依赖
 
-
-:::warning
+<Warning>
 涉及的微服务都需要添加如下依赖
-
-:::
+</Warning>
 
 ```xml
 <dependency>
@@ -25,20 +22,17 @@ title: "pig 整合轻量级日志链路追踪"
 </dependency>
 ```
 
-## ②  观察日志变化
+## 观察日志变化
 
+![日志变化示例1](https://cdn.nlark.com/yuque/0/2022/png/283679/1649579261443-c1d745c2-12cd-4898-a868-2683ce2d2bde.png)
 
-![](https://cdn.nlark.com/yuque/0/2022/png/283679/1649579261443-c1d745c2-12cd-4898-a868-2683ce2d2bde.png)
+![日志变化示例2](https://cdn.nlark.com/yuque/0/2022/png/283679/1649579250280-144471a8-a648-46f8-9a38-bd1361363d4f.png)
 
-![](https://cdn.nlark.com/yuque/0/2022/png/283679/1649579250280-144471a8-a648-46f8-9a38-bd1361363d4f.png)
+## 观察响应头 header 
 
+![响应头示例](https://cdn.nlark.com/yuque/0/2022/png/283679/1649657870210-c2dbc9a1-c464-4a65-918a-83b22f8ee899.png)
 
+## 问题咨询
 
-## ③ 观察响应头 header 
-![](https://cdn.nlark.com/yuque/0/2022/png/283679/1649657870210-c2dbc9a1-c464-4a65-918a-83b22f8ee899.png)
-
-
-
-## ❤  问题咨询
-![](https://cdn.nlark.com/yuque/0/2022/gif/283679/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
+![问题咨询](https://cdn.nlark.com/yuque/0/2022/gif/283679/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
 
