--- a/docs/integration/pig-shardingsphere-integration.mdx
+++ b/docs/integration/pig-shardingsphere-integration.mdx
@@ -2,31 +2,28 @@
 title: "数据源"
 ---
 
-[bilibili](https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=15&page=15&autoplay=0)
+<Card title="视频教程" icon="video" href="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=15&page=15&autoplay=0">
+  点击观看视频教程
+</Card>
 
-## 
-:::warning
-## 本文适配 SpringBoot 3.x，PIG JDK17 版本
-:::
+<Warning>
+本文适配 SpringBoot 3.x，PIG JDK17 版本
+</Warning>
 
 ## 目标
 
+本章节以尽量短的时间，演示 PIG 框架如何整合 Apache ShardingSphere 完成分表操作。
 
-<font style="color:#323232;">本章节以尽量短的时间，演示 PIG 框架如何整合 </font><font style="color:#323232;">Apache ShardingSphere 完成分表操作</font><font style="color:#323232;"> 。</font>
-
-
-
-:::success
+<Note>
 **实现效果：日志表根据 请求方法的不同 拆分为 GET、POST、PUT、DELETE 数据库**
+</Note>
 
-:::
+![](https://cdn.nlark.com/yuque/0/2021/png/283679/1637109926530-3c9a5aa5-cced-4810-ab0b-a4fa2186f1b3.png)
 
-
-
-## ![](https://cdn.nlark.com/yuque/0/2021/png/283679/1637109926530-3c9a5aa5-cced-4810-ab0b-a4fa2186f1b3.png)
-## 
 ## 快速上手
+
 ### 1. 添加 maven 依赖
+
 ```xml
 <dependency>
     <groupId>org.apache.shardingsphere</groupId>
@@ -35,7 +32,6 @@ title: "数据源"
 ```
 
 ### 2. 添加四张测试表
-
 
 ```sql
 CREATE TABLE `sys_log_GET` (
@@ -88,7 +84,6 @@ CREATE TABLE `sys_log_POST` (
                            KEY `sys_log_create_date` (`create_time`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci ROW_FORMAT=DYNAMIC COMMENT='日志表';
 
-
 CREATE TABLE `sys_log_PUT` (
                            `id` bigint NOT NULL AUTO_INCREMENT COMMENT '编号',
                            `type` char(1) DEFAULT '1' COMMENT '日志类型',
@@ -138,10 +133,10 @@ CREATE TABLE `sys_log_DELETE` (
                            KEY `sys_log_type` (`type`),
                            KEY `sys_log_create_date` (`create_time`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci ROW_FORMAT=DYNAMIC COMMENT='日志表';
-
 ```
 
-### 3.  nacos/pig-upms-biz-dev.yml 添加配置
+### 3. nacos/pig-upms-biz-dev.yml 添加配置
+
 ```yaml
 # 数据源
 spring:
@@ -150,7 +145,8 @@ spring:
     url: jdbc:shardingsphere:classpath:sharding.yaml 
 ```
 
-### 3.  pig-upms-biz/resources/sharding.yaml 
+### 3. pig-upms-biz/resources/sharding.yaml 
+
 ```yaml
 dataSources:
   ds_0:
@@ -178,20 +174,13 @@ rules:
         type: INLINE
 props:
   sql-show: true
-
 ```
 
 ### 4. 业务测试
 
-
-:::warning
+<Warning>
 编辑角色、新增角色 查看数据库中日志表记录
-
-:::
-
-
-
-
+</Warning>
 
 ## ❤  问题咨询
 ![](https://cdn.nlark.com/yuque/0/2022/gif/283679/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
